First commited as before_29508_rev1