@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2015 IBM Corporation and others.
+ * Copyright (c) 2000, 2009 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -15,20 +15,10 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Comparator;
 
-import org.eclipse.core.resources.IMarker;
-import org.eclipse.jface.dialogs.IDialogConstants;
-import org.eclipse.jface.dialogs.TrayDialog;
-import org.eclipse.jface.viewers.AbstractTreeViewer;
-import org.eclipse.jface.viewers.CheckStateChangedEvent;
-import org.eclipse.jface.viewers.CheckboxTreeViewer;
-import org.eclipse.jface.viewers.ICheckStateListener;
-import org.eclipse.jface.viewers.ILabelProvider;
-import org.eclipse.jface.viewers.ITreeContentProvider;
-import org.eclipse.jface.viewers.LabelProvider;
-import org.eclipse.jface.viewers.Viewer;
-import org.eclipse.jface.viewers.ViewerComparator;
-import org.eclipse.jface.window.Window;
+import com.ibm.icu.text.Collator;
+
 import org.eclipse.osgi.util.NLS;
+
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.events.SelectionAdapter;
 import org.eclipse.swt.events.SelectionEvent;
@@ -45,12 +35,26 @@ import org.eclipse.swt.widgets.Label;
 import org.eclipse.swt.widgets.MessageBox;
 import org.eclipse.swt.widgets.Shell;
 import org.eclipse.swt.widgets.Text;
+
+import org.eclipse.core.resources.IMarker;
+
+import org.eclipse.jface.dialogs.IDialogConstants;
+import org.eclipse.jface.dialogs.TrayDialog;
+import org.eclipse.jface.viewers.AbstractTreeViewer;
+import org.eclipse.jface.viewers.CheckStateChangedEvent;
+import org.eclipse.jface.viewers.CheckboxTreeViewer;
+import org.eclipse.jface.viewers.ICheckStateListener;
+import org.eclipse.jface.viewers.ILabelProvider;
+import org.eclipse.jface.viewers.ITreeContentProvider;
+import org.eclipse.jface.viewers.LabelProvider;
+import org.eclipse.jface.viewers.Viewer;
+import org.eclipse.jface.viewers.ViewerComparator;
+import org.eclipse.jface.window.Window;
+
 import org.eclipse.ui.IWorkingSet;
 import org.eclipse.ui.PlatformUI;
 import org.eclipse.ui.dialogs.IWorkingSetSelectionDialog;
 import org.eclipse.ui.internal.views.tasklist.TaskListMessages;
-
-import com.ibm.icu.text.Collator;
 
 class FiltersDialog extends TrayDialog {
     /**
@@ -208,7 +212,7 @@ class FiltersDialog extends TrayDialog {
 
         /**
          * Creates the working set filter selection widgets.
-         *
+         * 
          * @param parent the parent composite of the working set widgets
          */
         WorkingSetGroup(Composite parent) {
@@ -230,7 +234,7 @@ class FiltersDialog extends TrayDialog {
 
 		/**
 		 * Returns whether or not a working set filter should be used
-		 *
+		 * 
 		 * @return true=a working set filter should be used false=a working set filter should not be
 		 *         used
 		 */
@@ -241,7 +245,7 @@ class FiltersDialog extends TrayDialog {
         /**
          * Returns the selected working set filter or null if none
          * is selected.
-         *
+         * 
          * @return the selected working set filter or null if none
          * 	is selected.
          */
@@ -251,7 +255,7 @@ class FiltersDialog extends TrayDialog {
 
         /**
          * Sets the working set filter selection.
-         *
+         * 
          * @param selected true=a working set filter should be used
          * 	false=no working set filter should be used
          */
@@ -292,7 +296,7 @@ class FiltersDialog extends TrayDialog {
 
         /**
          * Sets the specified working set.
-         *
+         * 
          * @param workingSet the working set
          */
         void setWorkingSet(IWorkingSet workingSet) {
@@ -336,17 +340,20 @@ class FiltersDialog extends TrayDialog {
     private Text markerLimit;
 
     SelectionListener selectionListener = new SelectionAdapter() {
-        @Override
-		public void widgetSelected(SelectionEvent e) {
+        public void widgetSelected(SelectionEvent e) {
             FiltersDialog.this.widgetSelected(e);
         }
     };
 
-    private ICheckStateListener checkStateListener = event -> FiltersDialog.this.checkStateChanged(event);
+    private ICheckStateListener checkStateListener = new ICheckStateListener() {
+        public void checkStateChanged(CheckStateChangedEvent event) {
+            FiltersDialog.this.checkStateChanged(event);
+        }
+    };
 
     /**
      * Creates a new filters dialog.
-     *
+     * 
      * @param parentShell the parent shell
      */
     public FiltersDialog(Shell parentShell) {
@@ -354,8 +361,10 @@ class FiltersDialog extends TrayDialog {
         initTypes();
     }
 
-    @Override
-	protected void buttonPressed(int buttonId) {
+    /* (non-Javadoc)
+     * Method declared on Dialog.
+     */
+    protected void buttonPressed(int buttonId) {
         if (RESET_ID == buttonId) {
             resetPressed();
         } else if (SELECT_ID == buttonId) {
@@ -367,7 +376,7 @@ class FiltersDialog extends TrayDialog {
 
     /**
      * Check state change.
-     *
+     * 
      * @param event the event
      */
     public void checkStateChanged(CheckStateChangedEvent event) {
@@ -380,8 +389,10 @@ class FiltersDialog extends TrayDialog {
         updateEnabledState();
     }
 
-    @Override
-	protected void configureShell(Shell newShell) {
+    /* (non-Javadoc)
+     * Method declared on Window.
+     */
+    protected void configureShell(Shell newShell) {
         super.configureShell(newShell);
         newShell.setText(TaskListMessages.TaskList_filter);
         PlatformUI.getWorkbench().getHelpSystem().setHelp(newShell,
@@ -416,11 +427,10 @@ class FiltersDialog extends TrayDialog {
 
         Button reset = new Button(composite, SWT.PUSH);
         reset.setText(TaskListMessages.TaskList_resetText);
-		reset.setData(Integer.valueOf(RESET_ID));
+        reset.setData(new Integer(RESET_ID));
 
         reset.addSelectionListener(new SelectionAdapter() {
-            @Override
-			public void widgetSelected(SelectionEvent event) {
+            public void widgetSelected(SelectionEvent event) {
                 buttonPressed(((Integer) event.widget.getData()).intValue());
             }
         });
@@ -467,8 +477,10 @@ class FiltersDialog extends TrayDialog {
         return combo;
     }
 
-    @Override
-	protected Control createDialogArea(Composite parent) {
+    /* (non-Javadoc)
+     * Method declared on Dialog.
+     */
+    protected Control createDialogArea(Composite parent) {
         Composite composite = (Composite) super.createDialogArea(parent);
         createMarkerLimitArea(composite);
         createTypesArea(composite);
@@ -484,7 +496,7 @@ class FiltersDialog extends TrayDialog {
 
     /**
      * Creates a separator line above the OK/Cancel buttons bar
-     *
+     * 
      * @param parent the parent composite
      */
     void createSeparatorLine(Composite parent) {
@@ -557,35 +569,29 @@ class FiltersDialog extends TrayDialog {
 
     ITreeContentProvider getContentProvider() {
         return new ITreeContentProvider() {
-            @Override
-			public void inputChanged(Viewer viewer, Object oldInput,
+            public void inputChanged(Viewer viewer, Object oldInput,
                     Object newInput) {
             }
 
-            @Override
-			public void dispose() {
+            public void dispose() {
             }
 
-            @Override
-			public Object[] getElements(Object inputElement) {
+            public Object[] getElements(Object inputElement) {
                 return new Object[] {
                         markerTypesModel.getType(IMarker.PROBLEM),
                         markerTypesModel.getType(IMarker.TASK) };
             }
 
-            @Override
-			public Object[] getChildren(Object parentElement) {
+            public Object[] getChildren(Object parentElement) {
                 MarkerType type = (MarkerType) parentElement;
                 return type.getSubtypes();
             }
 
-            @Override
-			public Object getParent(Object element) {
+            public Object getParent(Object element) {
                 return null;
             }
 
-            @Override
-			public boolean hasChildren(Object element) {
+            public boolean hasChildren(Object element) {
                 return getChildren(element).length > 0;
             }
         };
@@ -623,8 +629,7 @@ class FiltersDialog extends TrayDialog {
 
     ILabelProvider getLabelProvider() {
         return new LabelProvider() {
-            @Override
-			public String getText(Object element) {
+            public String getText(Object element) {
                 MarkerType type = (MarkerType) element;
                 return type.getLabel();
             }
@@ -654,8 +659,7 @@ class FiltersDialog extends TrayDialog {
             Collections.sort(typesList, new Comparator() {
                 Collator collator = Collator.getInstance();
 
-                @Override
-				public int compare(Object o1, Object o2) {
+                public int compare(Object o1, Object o2) {
                     return collator.compare(((MarkerType) o1).getLabel(),
                             ((MarkerType) o2).getLabel());
                 }
@@ -699,8 +703,7 @@ class FiltersDialog extends TrayDialog {
 
     private ViewerComparator getViewerComparator() {
         return new ViewerComparator() {
-            @Override
-			public int compare(Viewer viewer, Object e1, Object e2) {
+            public int compare(Viewer viewer, Object e1, Object e2) {
                 MarkerType t1 = (MarkerType) e1;
                 MarkerType t2 = (MarkerType) e2;
                 return getComparator().compare(t1.getLabel(), t2.getLabel());
@@ -771,8 +774,7 @@ class FiltersDialog extends TrayDialog {
      * Must be done here rather than by extending open()
      * because after super.open() is called, the widgetry is disposed.
      */
-    @Override
-	protected void okPressed() {
+    protected void okPressed() {
         try {
             int parseResult = Integer.parseInt(this.markerLimit.getText());
 
@@ -946,7 +948,7 @@ class FiltersDialog extends TrayDialog {
 
 	/**
 	 * Handles selection on a check box or combo box.
-	 *
+	 * 
 	 * @param e the selection event
 	 */
     void widgetSelected(SelectionEvent e) {
