@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2006, 2015 IBM Corporation and others.
+ * Copyright (c) 2006, 2009 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -21,12 +21,15 @@ import org.eclipse.ui.statushandlers.StatusManager.INotificationTypes;
 
 /**
  * This is a default workbench error handler.
- *
+ * 
  * @see WorkbenchAdvisor#getWorkbenchErrorHandler()
  * @since 3.3
  */
 public class WorkbenchErrorHandler extends AbstractStatusHandler {
 
+	/* (non-Javadoc)
+	 * @see org.eclipse.ui.statushandlers.AbstractStatusHandler#supportsNotification(int)
+	 */
 	@Override
 	public boolean supportsNotification(int type) {
 		if (type == INotificationTypes.HANDLED) {
@@ -37,14 +40,21 @@ public class WorkbenchErrorHandler extends AbstractStatusHandler {
 
 	private WorkbenchStatusDialogManager statusDialogManager;
 
+	/*
+	 * (non-Javadoc)
+	 * 
+	 * @see org.eclipse.ui.statushandlers.AbstractStatusHandler#handle(org.eclipse.ui.statushandlers.StatusAdapter,
+	 *      int)
+	 */
 	@Override
 	public void handle(final StatusAdapter statusAdapter, int style) {
-		statusAdapter.setProperty(WorkbenchStatusDialogManager.HINT, Integer.valueOf(style));
+		statusAdapter.setProperty(WorkbenchStatusDialogManager.HINT,
+				new Integer(style));
 		if (((style & StatusManager.SHOW) == StatusManager.SHOW)
 				|| ((style & StatusManager.BLOCK) == StatusManager.BLOCK)) {
 
 			final boolean block = ((style & StatusManager.BLOCK) == StatusManager.BLOCK);
-
+			
 			if (Display.getCurrent() != null) {
 				showStatusAdapter(statusAdapter, block);
 			} else {
@@ -74,10 +84,10 @@ public class WorkbenchErrorHandler extends AbstractStatusHandler {
 					.log(statusAdapter.getStatus());
 		}
 	}
-
+	
 	/**
 	 * Requests the status dialog manager to show the status adapter.
-	 *
+	 * 
 	 * @param statusAdapter
 	 *            the status adapter to show
 	 * @param block
@@ -104,7 +114,7 @@ public class WorkbenchErrorHandler extends AbstractStatusHandler {
 			}
 		}
 	}
-
+	
 	private Shell getStatusDialogShell() {
 		return (Shell) getStatusDialogManager().getProperty(
 				IStatusDialogConstants.SHELL);
@@ -112,7 +122,7 @@ public class WorkbenchErrorHandler extends AbstractStatusHandler {
 
 	/**
 	 * This method returns current {@link WorkbenchStatusDialogManager}.
-	 *
+	 * 
 	 * @return current {@link WorkbenchStatusDialogManager}
 	 */
 	private WorkbenchStatusDialogManager getStatusDialogManager() {
@@ -144,7 +154,7 @@ public class WorkbenchErrorHandler extends AbstractStatusHandler {
 	 * <li>{@link WorkbenchStatusDialogManager#setSupportAreaProvider(AbstractStatusAreaProvider)}</li>
 	 * </ul>
 	 * Default configuration does nothing.
-	 *
+	 * 
 	 * @param statusDialog
 	 *            a status dialog to be configured.
 	 * @since 3.4
