@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2007, 2014 IBM Corporation and others.
+ * Copyright (c) 2007 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -14,7 +14,7 @@ package org.eclipse.jface.examples.databinding.snippets;
 import org.eclipse.core.databinding.observable.Realm;
 import org.eclipse.core.databinding.observable.list.WritableList;
 import org.eclipse.core.databinding.observable.value.WritableValue;
-import org.eclipse.jface.databinding.swt.DisplayRealm;
+import org.eclipse.jface.databinding.swt.SWTObservables;
 import org.eclipse.jface.internal.databinding.provisional.swt.TableUpdater;
 import org.eclipse.jface.layout.GridLayoutFactory;
 import org.eclipse.swt.SWT;
@@ -25,13 +25,13 @@ import org.eclipse.swt.widgets.TableItem;
 
 /**
  * @since 3.2
- *
+ * 
  */
 public class Snippet016TableUpdater {
 	public static void main(String[] args) {
 		final Display display = new Display();
 
-		Realm.runWithDefault(DisplayRealm.getRealm(display), new Runnable() {
+		Realm.runWithDefault(SWTObservables.getRealm(display), new Runnable() {
 			@Override
 			public void run() {
 				final Shell shell = createShell(display);
@@ -48,19 +48,19 @@ public class Snippet016TableUpdater {
 	}
 
 	static class Stuff {
-		private WritableValue counter = new WritableValue(Integer.valueOf(1), Integer.class);
+		private WritableValue counter = new WritableValue(new Integer(1), Integer.class);
 
 		public Stuff(final Display display) {
 			display.timerExec(1000, new Runnable() {
 				@Override
 				public void run() {
-					counter.setValue(Integer.valueOf(1 + ((Integer) counter
+					counter.setValue(new Integer(1 + ((Integer) counter
 							.getValue()).intValue()));
 					display.timerExec(1000, this);
 				}
 			});
 		}
-
+		
 		@Override
 		public String toString() {
 			return counter.getValue().toString();
