@@ -24,7 +24,11 @@ public class StringToCharacterValidatorTest extends TestCase {
 	private StringToCharacterValidator validator;
 	private StringToCharacterValidator primitiveValidator;
 
-	@Override
+	/*
+	 * (non-Javadoc)
+	 * 
+	 * @see junit.framework.TestCase#setUp()
+	 */
 	protected void setUp() throws Exception {
 		super.setUp();
 		StringToCharacterConverter converter = StringToCharacterConverter
@@ -56,7 +60,7 @@ public class StringToCharacterValidatorTest extends TestCase {
 	}
 
 	public void testNonStringIsInvalid() throws Exception {
-		assertFalse(primitiveValidator.validate(Integer.valueOf(4)).isOK());
+		assertFalse(primitiveValidator.validate(new Integer(4)).isOK());
 	}
 
 	public void testLongerThanOneCharacterIsInvalid() throws Exception {
